@@ -1,3 +1,4 @@
+2015-03-09 Fixed issue with restoring state in IWB Toolbar module
 2015-03-06 Fixed issue with restoring state in older content that uses Fractions module
 2015-03-06 Fixed issue with state in Double State Button module
 2015-03-06 Fixed calculating results for just part of lesson in Hierarchical Lesson Report module
